# betterlytics

./: .env.example  .env.production.example  .gitconfig  .gitignore  .prettierignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SERVER.md  SETUP.md  THIRD-PARTY-LICENSES.md  docker-compose.production.yml  docker-compose.yml  k6-perf-test.js  package.json  plausible-tracking-script.js  pnpm-lock.yaml  pnpm-workspace.yaml  simulate-events.js
.github/workflows/: pr-checks.yml  tests.yaml
backend/: .env.example  Cargo.toml  Dockerfile  package.json
backend/assets/user_agent_headers/: regexes.yaml
backend/src/: config.rs  lib.rs  main.rs
backend/src/analytics/: fingerprint.rs  mod.rs
backend/src/bot_detection/: mod.rs
backend/src/campaign/: mod.rs
backend/src/db/: mod.rs  models.rs
backend/src/geoip/: mod.rs
backend/src/geoip_updater/: mod.rs
backend/src/metrics/: mod.rs
backend/src/processing/: mod.rs
backend/src/referrer/: mod.rs
backend/src/session/: mod.rs
backend/src/tracking/: mod.rs
backend/src/ua_parser/: mod.rs
better-analytics-dashboard/: .dockerignore  .env.example  .prettierignore  Dockerfile  eslint.config.mjs  next.config.ts  package-lock.json  package.json
better-analytics-dashboard/auth-action-gen/: auto-gen-auth-actions.ts
better-analytics-dashboard/prisma/: schema.prisma  seed.js  seed.ts
better-analytics-dashboard/src/: middleware.ts
better-analytics-dashboard/src/app/: Providers.tsx  dictionaries.ts  globals.css  layout.tsx  manifest.json  page.tsx
better-analytics-dashboard/src/auth/: auth-actions.ts
better-analytics-dashboard/src/auth-actions/: auth-actions.ts
better-analytics-dashboard/src/components/: DataTable.tsx  DeviceTypePieChart.tsx  DropdownSelect.tsx  FlagIcon.tsx  InteractiveChart.tsx  LanguageSelect.tsx  LeafletMap.tsx  LoginForm.tsx  MultiProgressTable.tsx  PageTrafficChart.tsx  PageviewsChart.tsx  QueryFiltersSelector.tsx  SettingsButton.tsx  SettingsCard.tsx  SettingsPopover.tsx  Sidebar.tsx  SidebarHeader.tsx  SignOutButton.tsx  SummaryCard.tsx  ThemeSwitcher.tsx  TimeRangeSelector.tsx  TopPagesTable.tsx  Topbar.tsx  VisitorsChart.tsx  WorldMapWrapper.tsx  logo.tsx
better-analytics-dashboard/src/constants/: deviceTypes.ts
better-analytics-dashboard/src/contexts/: DictionaryContextProvider.tsx  DictionaryProvider.tsx  QueryFiltersContextProvider.tsx  SettingsProvider.tsx  TimeRangeContextProvider.tsx  UserJourneyFilterContextProvider.tsx
better-analytics-dashboard/src/dictionaries/: da.json  dictionaries.ts  en.json
better-analytics-dashboard/src/entities/: authContext.ts  campaign.ts  dashboard.ts  devices.ts  events.ts  filter.ts  funnels.ts  geography.ts  pages.ts  pageviewAggregation.ts  pageviews.ts  password.ts  referrers.ts  settings.ts  stats.ts  userJourney.ts  userSettings.ts
better-analytics-dashboard/src/hooks/: use-dashboard-id.ts  use-language.ts  use-tracking-verification.ts  useDashboardSettings.ts  useLanguage.ts  useUserSettings.ts
better-analytics-dashboard/src/lib/: auth-actions.ts  auth.ts  ba-query.ts  clickhouse.ts  env.ts  locale.ts  postgres.ts  safe-sql.test.ts  safe-sql.ts  utils.ts
better-analytics-dashboard/src/repositories/: clickhouse.ts
better-analytics-dashboard/src/services/: auth.service.ts  campaign.ts  dashboard.ts  (+14 more)
clickhouse-config/: .gitattributes  Dockerfile
clickhouse-config/config.d/: config.xml
clickhouse-config/setup/: init-users.sh
clickhouse-config/users.d/: backend.xml  dashboard.xml
dashboard/: .prettierrc.json  ARCHITECTURE.md  Dockerfile  eslint.config.mjs  package.json  tailwind.config.ts  vitest.config.ts
dashboard/prisma/: schema.prisma
docs/: .prettierignore  Dockerfile  next.config.mjs  package.json  tailwind.config.ts
migrations/: 1_initial_table.sql  2_rename_country_to_country_code.sql  3_add_browser_column.sql  3_add_referrer_source.sql  3_update_daily_unique_visitors_view.sql  4_add_os_column.sql  5_add_referrer_source.sql  6_add_campaign_parameters.sql  7_add_custom_events_columns.sql  8_drop_referrer_column.sql  9_add_domain_column.sql
prometheus/: prometheus.production.yml  prometheus.yml
proxy/: Dockerfile  nginx.conf
scripts/: run-clickhouse-setup.js  run-migration.js
src/: config.rs  main.rs
src/analytics/: mod.rs
src/db/: mod.rs
src/processing/: mod.rs
static/: analytics.js  test.html
(+629 files in other folders)
