[package]
name = "better-analytics"
version = "0.1.0"
edition = "2024"

[dependencies]
# Framework
axum = "0.8.3"
tokio = { version = "1.44.2", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["trace", "fs", "cors", "limit"] }

# Configuration
config = "0.15.11"
dotenv = "0.15.0"

# Error handling
thiserror = "2.0.12"
anyhow = "1.0.98"

# Logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

# Analytics
serde = "1.0.219"
serde_json = "1.0.140"
md-5 = "0.10.6"
nanoid = "0.4.0"

# Database
clickhouse = { version = "0.13.2", features = ["inserter", "chrono"] }
chrono = { version = "0.4.40", features = ["serde"] }

