[package]
name = "betterlytics"
version = "0.1.0"
edition = "2024"

[dependencies]
# Framework
axum = "0.8.3"
tokio = { version = "1.44.2", features = ["full", "time"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["trace", "fs", "cors", "limit"] }

# Configuration
config = "0.15.11"
dotenv = "0.15.0"

# Error handling
thiserror = "2.0.12"
anyhow = "1.0.98"

# Logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

# Analytics
serde = "1.0.219"
serde_json = "1.0.140"
md-5 = "0.10.6"
nanoid = "0.4.0"
url = "2.5.0"
once_cell = "1.19.0"
refparser = "0.1.0"

# Database
clickhouse = { version = "0.13.2", features = ["inserter", "chrono"] }
chrono = { version = "0.4.40", features = ["serde"] }
uuid = { version = "1.16.0", features = ["v4"] }
lazy_static = "1.5.0"

# GeoIP dependencies
maxminddb = "0.26.0"
reqwest = { version = "0.12.15", features = ["json", "stream"] }
flate2 = "1.1.1"
tar = "0.4.44"
httpdate = "1.0.3"
bytes = "1.10.1"

# Regex
regex = "1.10"

# Hashing
sha2 = "0.10"

# User Agent Parsing
uaparser = "0.6.4"
serde_yaml = "0.9"
isbot = "0.1.3"

moka = { version = "0.12.10", features = ["sync"] }
serde_repr = "0.1.20"
strum_macros = "0.27.1"
strum = "0.27.1"

# Prometheus metrics  
prometheus = "0.14.0"
sysinfo = "0.35.2"
